--- a/.github/workflows/mainTest.yml
+++ b/.github/workflows/mainTest.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 8
-          distribution: jdk
+          distribution: jdk #dis
           architecture: x64
 
       - name: Build and test
