--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - master
   pull_request:
     branches:
-      - master
+      - master 
   schedule:
     - cron: "0 0 * * 1"
 permissions: read-all
@@ -181,6 +181,13 @@ jobs:
     name: NonDex-Testing
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
+      - uses: actions/setup-java@2c7a4878f5d120bd643426d54ae1209b29cc01a3 # v3.4.1
+        with:
+          java-version: 8
+          distribution: temurin
+          architecture: x64
+          cache: maven
       - name: Build and test
         run: |
           mvn clean install -DskipTests -pl byte-buddy-dep -am -Dcheckstyle.skip
