--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -227,7 +227,7 @@
                         <configuration>
                             <excludes>
                                 <exclude>net.bytebuddy.asm.MemberSubstitution</exclude>
-                                <exclude>net.bytebuddy.implementation.FieldAccessor$FieldNameExtractor$ForBeanProperty</exclude>
+                                <exclude>net.bytebuddy.implementation.FieldAccessor</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
