--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -224,7 +224,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${version.plugin.surefire}</version>
-                        <configuration>
+                        <configuration combine.children="append">
                             <excludes>
                                 <exclude>net.bytebuddy.asm.MemberSubstitution</exclude>
                             </excludes>
@@ -246,7 +246,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${version.plugin.surefire}</version>
-                        <configuration>
+                        <configuration combine.children="append">
                             <excludes>
                                 <exclude>net.bytebuddy.description.type.TypeDescriptionArrayProjectionTest</exclude>
                                 <exclude>net.bytebuddy.description.annotation.AnnotationDescriptionForLoadedAnnotationTest</exclude>
@@ -275,7 +275,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${version.plugin.surefire}</version>
-                        <configuration>
+                        <configuration combine.children="append">
                             <excludes>
                                 <exclude>net.bytebuddy.description.type.TypeDescriptionArrayProjectionTest</exclude>
                                 <exclude>net.bytebuddy.description.annotation.AnnotationDescriptionForLoadedAnnotationTest</exclude>
