--- a/byte-buddy-gradle-plugin/android-plugin-test/app/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin-test/app/build.gradle
@@ -26,13 +26,11 @@ android {
     }
 }
 
-def outerPom = new groovy.xml.XmlSlurper().parse(rootProject.file("$rootDir/pom.xml"))
-
 dependencies {
     implementation group: 'androidx.appcompat', name: 'appcompat', version: '1.5.0'
-    implementation project(':android-plugin-test:aar-bytebuddy-target')
-    byteBuddy project(":android-plugin-test:jar-bytebuddy-plugin")
-    byteBuddy project(":android-plugin-test:aar-bytebuddy-plugin")
+    implementation project(':aar-bytebuddy-target')
+    byteBuddy project(":jar-bytebuddy-plugin")
+    byteBuddy project(":aar-bytebuddy-plugin")
     testImplementation group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
     androidTestImplementation group: 'androidx.test.ext', name: 'junit', version: '1.1.3'
     androidTestImplementation group: 'androidx.test.espresso', name: 'espresso-core', version: '3.4.0'
