--- a/byte-buddy-gradle-plugin/android-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin/build.gradle
@@ -4,8 +4,8 @@ plugins {
 
 apply from: "$rootDir/bytebuddy.gradle"
 
-targetCompatibility = JavaVersion.VERSION_11
-sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
