--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy-parent</artifactId>
-        <version>1.14.8</version>
+        <version>1.14.9-SNAPSHOT</version>
     </parent>
 
     <artifactId>byte-buddy-gradle-plugin</artifactId>
