Adding SPI stability tests

--- a/byte-buddy-gradle-plugin/android-plugin-test/aar-bytebuddy-target/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin-test/aar-bytebuddy-target/build.gradle
@@ -25,4 +25,5 @@ android {
 
 dependencies {
     implementation group: 'com.google.android.material', name: 'material', version: '1.6.1'
+    implementation project(":service-definition-lib")
 }
