--- a/byte-buddy-gradle-plugin/android-plugin-test/settings.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin-test/settings.gradle
@@ -2,3 +2,6 @@ include ":app"
 include ":aar-bytebuddy-target"
 include ":aar-bytebuddy-plugin"
 include ":jar-bytebuddy-plugin"
+include ":service-definition-lib"
+include ":service-implementation-lib"
+include ":service-implementation2-lib"
