--- a/byte-buddy-gradle-plugin/android-plugin-test/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin-test/build.gradle
@@ -10,10 +10,10 @@ buildscript {
     dependencies {
         classpath group: 'com.android.tools.build', name: 'gradle', version: '7.4.0'
 
-        def file = new File("${rootDir}/../build/libs/byte-buddy-gradle-plugin-${byteBuddyVersion}.jar").canonicalFile
-        classpath files(file)
-        def location = new File("$rootDir/../../byte-buddy/target/byte-buddy-${byteBuddyVersion}.jar").canonicalFile
-        classpath files(location.absolutePath)
+        def byteBuddyPlugin = new File("${rootDir}/../build/libs/byte-buddy-gradle-plugin-${byteBuddyVersion}.jar").canonicalFile
+        def byteBuddyLib = new File("$rootDir/../../byte-buddy/target/byte-buddy-${byteBuddyVersion}.jar").canonicalFile
+        classpath files(byteBuddyPlugin)
+        classpath files(byteBuddyLib.absolutePath)
     }
 }
 
