Enhanced android testing (#1538)
* Upgrading AGP to 7.4.0

* Making android test a standalone project

* Adapting ByteBuddyLocalClassesEnhancerTask to the new 7.4.0 apis

* Using ByteBuddyLocalClassesEnhancerTask with the new artifacts api

* Avoiding compilation oom

* Fixing "toTransform" method reflection

* Splitting resources from classes for local projects

* Using custom dependency rule to merge class dirs and resources from local and remote deps

* Using custom dependency rule to merge class dirs and resources from local and remote deps

* Using the last api's ALL scope

* Adding SPI stability tests

* Clean up tests

* Updating tests

* Fixing android descriptor

* Removed project references in ByteBuddyLocalClassesEnhancerTask due to https://docs.gradle.org/8.3/userguide/configuration_cache.html#config_cache:requirements:use_project_during_execution

* Update working regarding ByteBuddyLocalClassesEnhancerTask's scope

* Update working regarding ByteBuddyLocalClassesEnhancerTask's scope

* Update wordings and renaming methods in ByteBuddyAndroidPlugin

* Renaming bytebuddy 7.4 transform tasks

* Removed project references in ByteBuddyLocalClassesEnhancerTask due to https://docs.gradle.org/8.3/userguide/configuration_cache.html#config_cache:requirements:use_project_during_execution

* Update working regarding ByteBuddyLocalClassesEnhancerTask's scope

* Update working regarding ByteBuddyLocalClassesEnhancerTask's scope

* Update wordings and renaming methods in ByteBuddyAndroidPlugin

* Renaming bytebuddy 7.4 transform tasks

* Clean up

* Moving back ByteBuddyAndroidPlugin

* Clean up test's properties

* Removing "getProject()" calls in ByteBuddyLocalClassesEnhancerTask due to https://docs.gradle.org/8.3/userguide/configuration_cache.html#config_cache:requirements:use_project_during_execution

* Renaming vars

* Updating tests

* Reverting indentation and gradle versions

* Fixing indentation


--- a/byte-buddy-gradle-plugin/android-plugin-test/app/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin-test/app/build.gradle
@@ -26,14 +26,15 @@ android {
     }
 }
 
-def outerPom = new groovy.xml.XmlSlurper().parse(rootProject.file("$rootDir/pom.xml"))
-
 dependencies {
-    implementation group: 'androidx.appcompat', name: 'appcompat', version: '1.5.0'
-    implementation project(':android-plugin-test:aar-bytebuddy-target')
-    byteBuddy project(":android-plugin-test:jar-bytebuddy-plugin")
-    byteBuddy project(":android-plugin-test:aar-bytebuddy-plugin")
+    implementation project(":service-definition-lib")
+    implementation project(':aar-bytebuddy-target')
+    implementation project(":service-implementation-lib")
+    implementation project(":service-implementation2-lib")
+    byteBuddy project(":jar-bytebuddy-plugin")
+    byteBuddy project(":aar-bytebuddy-plugin")
     testImplementation group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
-    androidTestImplementation group: 'androidx.test.ext', name: 'junit', version: '1.1.3'
-    androidTestImplementation group: 'androidx.test.espresso', name: 'espresso-core', version: '3.4.0'
+    androidTestImplementation group: 'androidx.test', name: 'rules', version: '1.5.0'
+    androidTestImplementation group: 'androidx.test', name: 'runner', version: '1.5.2'
+    androidTestImplementation group: 'androidx.test.ext', name: 'junit', version: '1.1.5'
 }
