--- a/byte-buddy-gradle-plugin/android-plugin-test/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin-test/build.gradle
@@ -1,13 +1,19 @@
 buildscript {
-    def pom = new groovy.xml.XmlSlurper().parse(rootProject.file('pom.xml'))
-    def version = pom.parent.version.text().toString()
+    ext {
+        outerPom = new groovy.xml.XmlSlurper().parse(rootProject.file('../pom.xml'))
+        byteBuddyVersion = outerPom.parent.version.text().toString()
+    }
     repositories {
         mavenCentral()
         google()
     }
     dependencies {
-        classpath group: 'com.android.tools.build', name: 'gradle', version: '7.2.0'
-        classpath files(new File("${rootProject.buildDir}/libs/byte-buddy-gradle-plugin-${version}.jar").canonicalFile)
+        classpath group: 'com.android.tools.build', name: 'gradle', version: '7.4.0'
+
+        def byteBuddyPlugin = new File("${rootDir}/../build/libs/byte-buddy-gradle-plugin-${byteBuddyVersion}.jar").canonicalFile
+        def byteBuddyLib = new File("$rootDir/../../byte-buddy/target/byte-buddy-${byteBuddyVersion}.jar").canonicalFile
+        classpath files(byteBuddyPlugin)
+        classpath files(byteBuddyLib.absolutePath)
     }
 }
 
