--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
       - uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2 # v3.12.0
         with:
-          java-version: 22-ea
+          java-version: 21-ea
           distribution: zulu
           cache: maven
       - name: Build project
-        run: ./mvnw verify -Pjava22 -Dnet.bytebuddy.experimental
+        run: ./mvnw verify -Pjava21 -Dnet.bytebuddy.experimental
         continue-on-error: false
   hotspot-supported:
     name: Any (supported)
@@ -31,7 +31,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-20.04, macos-11, windows-2022 ]
-        java: [ 8, 11, 17, 21 ]
+        java: [ 8, 11, 17 ]
     runs-on: ${{ matrix.os }}
     needs: [ extended ]
     steps:
