--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,9 +27,15 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
+  # - name: Build with Maven
+  #   run: mvn -B package --file pom.xml
+    - name: Build with Maven (compile the module where the test is, and all modules it depends on)  
+      run: mvn clean install -DskipTests -pl byte-buddy-dep -am
+    - name: run the test to check that it passes
+      run: mvn -pl byte-buddy-dep test -Dtest=net.bytebuddy.description.type.TypeDescriptionForLoadedTypeTest#testTypeAnnotationExceptionType
+    - name:  if the test passes in regular runs, see if it fails with the NonDex tool that reports flaky tests
+      run: mvn -pl byte-buddy-dep edu.illinois:nondex-maven-plugin:2.1.1:nondex -Dtest=net.bytebuddy.description.type.TypeDescriptionForLoadedTypeTest#testTypeAnnotationExceptionType
+      
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
