Updating tests to replicate duplicated module-info.class issue

--- a/byte-buddy-gradle-plugin/android-plugin-test/jar-bytebuddy-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin-test/jar-bytebuddy-plugin/build.gradle
@@ -4,6 +4,6 @@ plugins {
 apply from: "$rootDir/bytebuddy.gradle"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = javaVersion
+    targetCompatibility = javaVersion
 }
