--- a/byte-buddy-gradle-plugin/android-plugin-test/aar-bytebuddy-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin-test/aar-bytebuddy-plugin/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = javaVersion
+        targetCompatibility = javaVersion
     }
 }
