--- a/byte-buddy-gradle-plugin/android-plugin-test/service-definition-lib/build.gradle
+++ b/byte-buddy-gradle-plugin/android-plugin-test/service-definition-lib/build.gradle
@@ -3,6 +3,6 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = javaVersion
+    targetCompatibility = javaVersion
 }
