--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
       - uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2 # v3.12.0
         with:
           java-version: ${{ matrix.java }}
-          distribution: temurin
+          distribution: zulu
           architecture: x64
           cache: maven
       - name: Build project
@@ -95,7 +95,7 @@ jobs:
       - uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2 # v3.12.0
         with:
           java-version: ${{ matrix.java }}
-          distribution: temurin
+          distribution: zulu
           architecture: x86
           cache: maven
       - name: Build project
