Avoid use of deprecated property and ignore tests that break with Gradle 8.4 for the time being.

--- a/byte-buddy-gradle-plugin/pom.xml
+++ b/byte-buddy-gradle-plugin/pom.xml
@@ -108,6 +108,9 @@
                                 <argument>build</argument>
                                 <argument>copyJavadoc</argument>
                                 <argument>--info</argument>
+                                <argument>--stacktrace</argument>
+                                <argument>--warning-mode</argument>
+                                <argument>all</argument>
                                 <argument>-Dnet.bytebuddy.test.integration=${bytebuddy.integration}</argument>
                                 <argument>-Dnet.bytebuddy.misc.extras=${bytebuddy.extras}</argument>
                                 <argument>-Dnet.bytebuddy.gradle.release=${gradle.release}</argument>
