--- a/byte-buddy-gradle-plugin/common.gradle
+++ b/byte-buddy-gradle-plugin/common.gradle
@@ -21,11 +21,18 @@ if (!raw.startsWith("1.") && raw.contains(".")) {
     current = JavaVersion.toVersion(raw)
 }
 
+def java19Version
+try {
+    java19Version = JavaVersion.valueOf("JAVA_19");
+} catch (Exception ignored) {
+    java19Version = null
+}
+
 def sourceVersion = System.getProperty("net.bytebuddy.gradle.version.source")
 def source
 if (sourceVersion != null) {
     source = JavaVersion.toVersion(sourceVersion)
-} else if (current > JavaVersion.VERSION_19) {
+} else if (java19Version != null && current > java19Version) {
     source = JavaVersion.VERSION_1_8
 } else if (current > JavaVersion.VERSION_1_9) {
     source = JavaVersion.VERSION_1_7
@@ -38,7 +45,7 @@ def targetVersion = System.getProperty("net.bytebuddy.gradle.version.target")
 def target
 if (targetVersion != null) {
     target = JavaVersion.toVersion(targetVersion)
-} else if (current > JavaVersion.VERSION_19) {
+} else if (java19Version != null && current > java19Version) {
     target = JavaVersion.VERSION_1_8
 } else if (current > JavaVersion.VERSION_1_9) {
     target = JavaVersion.VERSION_1_7
