Avoid broken modular jars when using the shade plugin where the jar tool is removing packages from the module info that are not contained before adding the shaded contents.

--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -169,9 +169,9 @@
                 </dependencies>
                 <executions>
                     <execution>
-                        <phase>prepare-package</phase>
+                        <phase>package</phase>
                         <goals>
-                            <goal>make-module</goal>
+                            <goal>inject-module</goal>
                         </goals>
                         <configuration>
                             <skip>${modulemaker.skip}</skip>
