--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,18 +132,18 @@ jobs:
           egress-policy: block
           disable-telemetry: true
           allowed-endpoints: >
-            github.com:443
-            raw.githubusercontent.com:443
             artifactcache.actions.githubusercontent.com:443
-            blob.core.windows.net:443
-            repo.maven.apache.org:443
+            aw97acprodeus1file2.blob.core.windows.net:443
             coveralls.io:443
-            javadoc.io:443
-            docs.oracle.com:443
             docs.gradle.org:443
-            plugins.gradle.org:443
-            services.gradle.org:443
+            docs.oracle.com:443
             downloads.gradle-dn.com:443
+            github.com:443
+            javadoc.io:443
+            plugins.gradle.org:443
+            raw.githubusercontent.com:443
+            repo.maven.apache.org:443
+            services.gradle.org:443
       - uses: actions/checkout@1d96c772d19495a3b5c517cd2bc0cb401ea0529f # v4.1.3
       - uses: actions/setup-java@cd89f46ac9d01407894225f350157564c9c7cee2 # v3.12.0
         with:
