--- a/byte-buddy-dep/pom.xml
+++ b/byte-buddy-dep/pom.xml
@@ -35,6 +35,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>codes.rafael.asmjdkbridge</groupId>
+            <artifactId>asm-jdk-bridge</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
             <version>${version.asm}</version>
@@ -403,6 +408,7 @@
                                     <goal>testCompile</goal>
                                 </goals>
                                 <configuration>
+                                    <enablePreview>true</enablePreview>
                                     <testIncludes>
                                         <include>net/bytebuddy/test/precompiled/v4/**</include>
                                     </testIncludes>
@@ -497,6 +503,7 @@
                                     <goal>testCompile</goal>
                                 </goals>
                                 <configuration>
+                                    <enablePreview>true</enablePreview>
                                     <target>${bytecode.test.version}</target>
                                     <testIncludes>
                                         <include>net/bytebuddy/test/precompiled/v4jsr14/**</include>
@@ -844,6 +851,7 @@
                                     <goal>testCompile</goal>
                                 </goals>
                                 <configuration>
+                                    <enablePreview>true</enablePreview>
                                     <parameters>true</parameters>
                                     <testIncludes>
                                         <include>net/bytebuddy/test/precompiled/v8parameters/**</include>
